[project]
authors = [{ name = "madliani", email = "madliani@hotmail.com" }]
description = "A Socket.IO server to the react-trade."
keywords = ["flask", "socket.io", "react-admin"]
license = { file = "COPYING" }
maintainers = [{ name = "madliani", email = "madliani@hotmail.com" }]
name = "socket-trade"
readme = "README.md"
requires-python = ">=3.12"
version = "1.0.0"

[project.urls]
"Bug Tracker" = "https://github.com/madliani/socket-trade/issues"
Changelog = "https://github.com/madliani/socket-trade/CHANGELOG.md"
Documentation = "https://github.com/madliani/socket-trade/README.md"
Homepage = "https://github.com/madliani/socket-trade"
Repository = "https://github.com/madliani/socket-trade.git"
